force-app/main/default/objects/Account/fields/Sales_6_Months__c.field-meta.xml
<CustomField>
    <fullName>Sales_6_Months__c</fullName>
    <formula>Sales_Month_1__c +
Sales_Month_2__c +
Sales_Month_3__c +
Sales_Month_4__c +
Sales_Month_5__c +
Sales_Month_6__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales 6 Months</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>