force-app/main/default/objects/Account/fields/Same_Owner_As_Parent__c.field-meta.xml
<CustomField>
    <fullName>Same_Owner_As_Parent__c</fullName>
    <formula>Owner.Id =  Parent.Owner.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Same Owner As Parent</label>
    <type>Checkbox</type>
</CustomField>