force-app/main/default/objects/Account/fields/September_Goal__c.field-meta.xml
<CustomField>
    <fullName>September_Goal__c</fullName>
    <label>September Goal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>