force-app/main/default/objects/Account/fields/September_State__c.field-meta.xml
<CustomField>
    <fullName>September_State__c</fullName>
    <label>September State</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>