force-app/main/default/objects/Account/fields/Shipping_Address_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Address_Lookup__c</fullName>
    <formula>if( LEFT(Primary_Shipping_Address__r.Location_Address1__c, 3) == &quot;N/A&quot;, &quot;&quot;, Primary_Shipping_Address__r.Location_Address1__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Shipping Address</label>
    <type>Text</type>
</CustomField>