force-app/main/default/objects/Account/fields/Show_Goal_Tracker__c.field-meta.xml
<CustomField>
    <fullName>Show_Goal_Tracker__c</fullName>
    <formula>IF(
OR(
 Fiscal_Year_Goal__c &gt; 0
),
 True,
 False
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Show Goal Tracker</label>
    <type>Checkbox</type>
</CustomField>