force-app/main/default/objects/Account/fields/Signature_Parse_Name__c.field-meta.xml
<CustomField>
    <fullName>Signature_Parse_Name__c</fullName>
    <label>Signature Parse Name</label>
    <length>128</length>
    <type>Text</type>
</CustomField>