force-app/main/default/objects/Account/fields/Temporary_Owner__c.field-meta.xml
<CustomField>
    <fullName>Temporary_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Temporary owner of account</inlineHelpText>
    <label>Temporary Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>