force-app/main/default/objects/Account/fields/Temporary_Owner_Reset_Date__c.field-meta.xml
<CustomField>
    <fullName>Temporary_Owner_Reset_Date__c</fullName>
    <inlineHelpText>Date the temporary owner will be automatically cleared</inlineHelpText>
    <label>Temporary Owner Reset Date</label>
    <type>Date</type>
</CustomField>