force-app/main/default/objects/Account/fields/Valid_Invoice_Contact_Account__c.field-meta.xml
<CustomField>
    <fullName>Valid_Invoice_Contact_Account__c</fullName>
    <formula>Invoice_Contact__r.AccountId =  Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Valid Invoice Contact Account</label>
    <type>Checkbox</type>
</CustomField>