force-app/main/default/objects/Account/fields/Valid_Primary_Contact_Account__c.field-meta.xml
<CustomField>
    <fullName>Valid_Primary_Contact_Account__c</fullName>
    <formula>Primary_Contact__r.AccountId =  Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Valid Primary Contact Account</label>
    <type>Checkbox</type>
</CustomField>