force-app/main/default/objects/Account/fields/WSIBNumber__c.field-meta.xml
<CustomField>
    <fullName>WSIBNumber__c</fullName>
    <label>WSIB Number</label>
    <type>TextArea</type>
</CustomField>