force-app/main/default/objects/Account/fields/X5_Year_Average_Sales__c.field-meta.xml
<CustomField>
    <fullName>X5_Year_Average_Sales__c</fullName>
    <formula>( Sales_2018__c )/1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>5 Year Average Sales3</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>