force-app/main/default/objects/Account/fields/Years_Of_Online_Training__c.field-meta.xml
<CustomField>
    <fullName>Years_Of_Online_Training__c</fullName>
    <label>Years Of Online Training</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>