force-app/main/default/objects/Account/validationRules/A_Primary_Billing_Address_Already_Exists.validationRule-meta.xml
<ValidationRule>
    <fullName>A_Primary_Billing_Address_Already_Exists</fullName>
    <active>true</active>
    <errorConditionFormula>Primary_Billing_Address_Count__c &gt;= 2</errorConditionFormula>
    <errorMessage>A Primary Billing Address Already Exists For This Account. You Can&apos;t Have Two Primary Addresses of The Same Type.</errorMessage>
</ValidationRule>