force-app/main/default/objects/Account/validationRules/Account_Owner_Change_If_Owner.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_Owner_Change_If_Owner</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISCHANGED(OwnerId),
$User.Id != PRIORVALUE(OwnerId),
not( $User.Alias = &apos;aivan&apos;), 
not( $User.Alias = &apos;gthom&apos;), 
not ($User.Alias = &apos;slam&apos;), 
not ($User.Alias = &apos;bmath&apos;),
not ($User.Alias = &apos;lcruz&apos;),
not ($User.Alias = &apos;rmoll&apos;),
not ($User.Alias = &apos;JMorr&apos;)
)</errorConditionFormula>
    <errorMessage>You cannot change ownership of accounts that belong to another rep!</errorMessage>
</ValidationRule>