force-app/main/default/objects/Account/validationRules/Cannot_Activate_OSG_Integration_Accounts.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Activate_OSG_Integration_Accounts</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
Text(PRIORVALUE(Account_Status__c)) = &apos;Pending&apos;,
Text(Account_Status__c) != &apos;Pending&apos;,
OwnerId = &apos;00546000000u1Pz&apos; /* OSG Integration */
)</errorConditionFormula>
    <errorMessage>Must change account owner before making account active!</errorMessage>
</ValidationRule>