force-app/main/default/objects/Account/validationRules/Cannot_Change_Pending_Account.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Change_Pending_Account</fullName>
    <active>true</active>
    <errorConditionFormula>and(
Text(PRIORVALUE(Account_Status__c)) = &apos;Pending&apos;,
Text(Account_Status__c) != &apos;Pending&apos;,
$UserRole.Name != &apos;System Admin&apos;,
$UserRole.Name != &apos;Client Success Specialist&apos;,
$User.Id != &apos;00546000001efkf&apos; /*Sandy*/ 
)

/*
and(
$User.Id != &apos;00546000001efkf&apos;, Sandy
$User.Id != &apos;00546000000ufVc&apos;, Blessen
$User.Id != &apos;0054p000002c047&apos;, Ryan M
$User.Id != &apos;00546000002vwC9&apos;, Jacob M
$User.Id != &apos;00546000002vwCA&apos;, Ada O
$User.Id != &apos;0054p000002c04C&apos;  Zack B
)
*/</errorConditionFormula>
    <errorMessage>Cannot make modifications to a pending account! Contact CSS team!</errorMessage>
</ValidationRule>