force-app/main/default/objects/Account/validationRules/Cannot_Set_Account_To_Pending.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Set_Account_To_Pending</fullName>
    <active>true</active>
    <errorConditionFormula>and(
$User.Id != &apos;00546000000ufVc&apos;,  /*Blessen*/
Text(PRIORVALUE(Account_Status__c)) != &apos;Pending&apos;,
Text(Account_Status__c) = &apos;Pending&apos;
)</errorConditionFormula>
    <errorMessage>Cannot set account to pending!</errorMessage>
</ValidationRule>