force-app/main/default/objects/Account/validationRules/Duplicate_Account_Requires_Parent.validationRule-meta.xml
<ValidationRule>
    <fullName>Duplicate_Account_Requires_Parent</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
ischanged(Duplicate_Account__c),
 Duplicate_Account__c = true,
 ISBLANK(ParentId)
)</errorConditionFormula>
    <errorMessage>Parent account must be set if flagging account as duplicate!</errorMessage>
</ValidationRule>