force-app/main/default/objects/Account/validationRules/Force_Primary_Billing_Address_Type.validationRule-meta.xml
<ValidationRule>
    <fullName>Force_Primary_Billing_Address_Type</fullName>
    <active>true</active>
    <errorConditionFormula>and(
 ischanged(Primary_Billing_Address__c),
Primary_Billing_Address_Type__c != &apos;Billing Address&apos;, Primary_Billing_Address_Type__c != &apos;&apos;)</errorConditionFormula>
    <errorMessage>Primary Billing Address Must Be A Billing Address</errorMessage>
</ValidationRule>