force-app/main/default/objects/Account/validationRules/Force_Primary_Shipping_Address_Type.validationRule-meta.xml
<ValidationRule>
    <fullName>Force_Primary_Shipping_Address_Type</fullName>
    <active>true</active>
    <errorConditionFormula>and(
 ischanged(Primary_Shipping_Address__c),
Primary_Shipping_Address_Type__c != &apos;Shipping Address&apos;, Primary_Shipping_Address_Type__c != &apos;&apos;)</errorConditionFormula>
    <errorMessage>Primary Shipping Address Must Be A Shipping Address</errorMessage>
</ValidationRule>