force-app/main/default/objects/Account/validationRules/Invalid_Invoice_Contact.validationRule-meta.xml
<ValidationRule>
    <fullName>Invalid_Invoice_Contact</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 ISCHANGED(Invoice_Contact__c),
 NOT(ISBLANK(Invoice_Contact__c)),
 Invoice_Contact__r.Has_Valid_Data__c = false
,$User.Id != &apos;00546000000u1Pz&apos;
)</errorConditionFormula>
    <errorMessage>Ensure contact has valid data before making invoice contact! (Name, Phone, Email)</errorMessage>
</ValidationRule>