force-app/main/default/objects/Account/validationRules/Invalid_Primary_Contact.validationRule-meta.xml
<ValidationRule>
    <fullName>Invalid_Primary_Contact</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 ISCHANGED(Primary_Contact__c),
 NOT(ISBLANK(Primary_Contact__c)),
 Primary_Contact__r.Has_Valid_Data__c = false
,$User.Id != &apos;00546000000u1Pz&apos;
)</errorConditionFormula>
    <errorMessage>Ensure contact has valid data before making primary! (Name, Phone, Email)</errorMessage>
</ValidationRule>