force-app/main/default/objects/Account/validationRules/Invoice_Contact_Account_Match.validationRule-meta.xml
<ValidationRule>
    <fullName>Invoice_Contact_Account_Match</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
IsChanged(Invoice_Contact__c),
Invoice_Contact__r.Account.Id != Id,
NOT(ISBLANK(Invoice_Contact__c))
)</errorConditionFormula>
    <errorMessage>The Invoice Contact used does not belong to this account!</errorMessage>
</ValidationRule>