force-app/main/default/objects/Account/validationRules/Lock_Inactive_Account.validationRule-meta.xml
<ValidationRule>
    <fullName>Lock_Inactive_Account</fullName>
    <active>true</active>
    <errorConditionFormula>and(
and(
Text(PRIORVALUE(Account_Status__c)) = &apos;Inactive&apos;,
not(Text(Account_Status__c) = &apos;Inactive&apos;)
)
,
not(
OR(
$UserRole.Name = &apos;System Admin&apos;,
$UserRole.Name = &apos;Accounting&apos;,
$UserRole.Name = &apos;Accounting and Operations Manager&apos;
)
)
)</errorConditionFormula>
    <errorMessage>You can&apos;t make changes to an inactive account. Contact Accounting!</errorMessage>
</ValidationRule>