force-app/main/default/objects/Account/validationRules/Lock_Owner_Block.validationRule-meta.xml
<ValidationRule>
    <fullName>Lock_Owner_Block</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISCHANGED(OwnerId),
Lock_Owner__c = TRUE,
$User.Id != &apos;00546000000urMD&apos;,
$User.Id != &apos;00546000000ufVc&apos;
)</errorConditionFormula>
    <errorMessage>This accounts ownership is locked! Contact Ana regarding this account.</errorMessage>
</ValidationRule>