force-app/main/default/objects/Account/validationRules/Phone_Number_Regex.validationRule-meta.xml
<ValidationRule>
    <fullName>Phone_Number_Regex</fullName>
    <active>false</active>
    <errorConditionFormula>AND( 
ISCHANGED(Phone), 
NOT( 
REGEX( 
Phone, 
&quot;\\A(([1][\\s])?([\\(]([0-9]{3})[\\)][\\s]|([1][\\-])?([0-9]{3})[\\-])([0-9]{3})[\\-]([0-9]{4}))\\z&quot; 
) 
) 
)</errorConditionFormula>
    <errorDisplayField>Phone</errorDisplayField>
    <errorMessage>The phone number is not in a valid format.
Ex. (123) 123-1234 or 123-123-1234</errorMessage>
</ValidationRule>