force-app/main/default/objects/Account/validationRules/PhoneExtGreaterThanOne.validationRule-meta.xml
<ValidationRule>
    <fullName>PhoneExtGreaterThanOne</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT(ISBLANK(Phone_Ext__c)),
Phone_Ext__c &lt;=0
)</errorConditionFormula>
    <errorMessage>Invalid Phone Extension. Use only numbers.</errorMessage>
</ValidationRule>