force-app/main/default/objects/Account/validationRules/Prevent_Account_Unfreezing.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Account_Unfreezing</fullName>
    <active>true</active>
    <errorConditionFormula>and(
Text(PRIORVALUE(Account_Status__c)) = &apos;Frozen&apos;, 
not(Text(Account_Status__c) = &apos;Frozen&apos;),
$UserRole.Name != &apos;System Admin&apos;,
$UserRole.Name != &apos;Accounting&apos;,
$UserRole.Name != &apos;Accounting and Operations Manager&apos;
)</errorConditionFormula>
    <errorMessage>You can&apos;t make changes to a frozen account. Contact Accounting or your administrator</errorMessage>
</ValidationRule>