force-app/main/default/objects/Account/validationRules/Primary_Contact_Account_Match.validationRule-meta.xml
<ValidationRule>
    <fullName>Primary_Contact_Account_Match</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
IsChanged(Primary_Contact__c),
Primary_Contact__r.Account.Id != Id,
NOT(ISBLANK(Primary_Contact__c))
)</errorConditionFormula>
    <errorMessage>The Primary Contact used does not belong to this account!</errorMessage>
</ValidationRule>