force-app/main/default/objects/Account/validationRules/Primary_Invoice_Contact_is_Inactive.validationRule-meta.xml
<ValidationRule>
    <fullName>Primary_Invoice_Contact_is_Inactive</fullName>
    <active>true</active>
    <errorConditionFormula>or (
 isPickVal(Primary_Contact__r.Contact_Status__c, &apos;Inactive&apos;),
 isPickVal(Invoice_Contact__r.Contact_Status__c , &apos;Inactive&apos;)
)</errorConditionFormula>
    <errorMessage>Primary/Invoice Contact Can&apos;t Be Inactive</errorMessage>
</ValidationRule>