force-app/main/default/objects/Account/validationRules/principal_account_name.validationRule-meta.xml
<ValidationRule>
    <fullName>principal_account_name</fullName>
    <active>true</active>
    <errorConditionFormula>or(
and(
 RIGHT(Name, 12) != &quot; (Principal)&quot;,
 Principal_Account__c 
)
,
and(
 RIGHT(Name, 12) = &quot; (Principal)&quot;,
 not(Principal_Account__c)
)
)</errorConditionFormula>
    <errorMessage>Principal accounts must end with (Principal) and have Principal Account enabled</errorMessage>
</ValidationRule>