force-app/main/default/objects/Account/validationRules/Set_Duplicate_Account.validationRule-meta.xml
<ValidationRule>
    <fullName>Set_Duplicate_Account</fullName>
    <active>true</active>
    <errorConditionFormula>and(
 ISCHANGED( Duplicate_Account__c ),
 PRIORVALUE( Duplicate_Account__c ) = true,
 $User.Id != &apos;00546000001efkf&apos;, /*Sandy*/
 $User.Id != &apos;00546000000ufVc&apos;  /*Blessen*/
)</errorConditionFormula>
    <errorMessage>You do not have the permissions to unset this field! Place any future orders on the parent account</errorMessage>
</ValidationRule>