force-app/main/default/objects/Account/validationRules/Set_Online_Training_Contract_Length.validationRule-meta.xml
<ValidationRule>
    <fullName>Set_Online_Training_Contract_Length</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
Online_Training_Contract__c = TRUE,
ISBLANK(TEXT( Online_Training_Contract_Length__c))
)</errorConditionFormula>
    <errorMessage>Must set the online training contract length!</errorMessage>
</ValidationRule>