force-app/main/default/objects/Account/validationRules/Set_Online_Training_Notes.validationRule-meta.xml
<ValidationRule>
    <fullName>Set_Online_Training_Notes</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL(Reason_Online_Provider_Selected__c, &apos;Other&apos;),
ISBLANK( Additional_Online_Training_Notes__c )
)</errorConditionFormula>
    <errorMessage>Must set online training notes if provider selection reason is other!</errorMessage>
</ValidationRule>