force-app/main/default/objects/Account/validationRules/SF_Order_Invoicing_Default_Users.validationRule-meta.xml
<ValidationRule>
    <fullName>SF_Order_Invoicing_Default_Users</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISCHANGED( Default_SF_Orders_To_Not_Invoice__c ),
$UserRole.Name != &apos;System Admin&apos;,
$UserRole.Name != &apos;Accounting&apos;,
$UserRole.Name != &apos;Accounting and Operations Manager&apos;
)</errorConditionFormula>
    <errorMessage>You do not have permission to edit the default for order invoicing! Contact accounting</errorMessage>
</ValidationRule>