force-app/main/default/objects/Account/listViews/Accounts_Needing_Primary_Contacts.listView-meta.xml
<ListView>
    <fullName>Accounts_Needing_Primary_Contacts</fullName>
    <booleanFilter>1 OR 2</booleanFilter>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Has_Valid_Invoice_Contact__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Has_Valid_Primary_Contact__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Accounts Need Primary/Invoice Contacts</label>
</ListView>