force-app/main/default/objects/Account/listViews/All_Active_Accounts.listView-meta.xml
<ListView>
    <fullName>All_Active_Accounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.INDUSTRY</columns>
    <columns>Client_ID__c</columns>
    <columns>Primary_Contact__c</columns>
    <columns>ACCOUNT.ADDRESS1_STREET</columns>
    <columns>ACCOUNT.ADDRESS1_CITY</columns>
    <columns>Primary_Shipping_Address__c</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>Last_Contact__c</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>ACCOUNT.LAST_ACTIVITY</columns>
    <columns>Fiscal_Year_Goal__c</columns>
    <columns>Requested_Sales_Goal__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Account_Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <label>All Active Accounts</label>
</ListView>