force-app/main/default/objects/Account/listViews/All_Business_Accounts.listView-meta.xml
<ListView>
    <fullName>All_Business_Accounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.INDUSTRY</columns>
    <columns>ACCOUNT.EMPLOYEES</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Business_Account</value>
    </filters>
    <filters>
        <field>ACCOUNT.INDUSTRY</field>
        <operation>equals</operation>
    </filters>
    <label>All Business Accounts</label>
</ListView>