force-app/main/default/objects/Account/listViews/BDA_call_que_0_75.listView-meta.xml
<ListView>
    <fullName>BDA_call_que_0_75</fullName>
    <columns>Notes__c</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_CITY</columns>
    <columns>Primary_Contact__c</columns>
    <columns>Primary_Contact_Email__c</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.INDUSTRY</columns>
    <columns>X5_Year_Average_Sales__c</columns>
    <columns>ACCOUNT.LAST_ACTIVITY</columns>
    <columns>Last_Contact__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>ACCOUNT.URL</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.LAST_NAME</field>
        <operation>equals</operation>
        <value>mandic,thomson,lam</value>
    </filters>
    <filters>
        <field>ACCOUNT.EMPLOYEES</field>
        <operation>lessThan</operation>
        <value>75</value>
    </filters>
    <label>BDA call que - 0-75</label>
</ListView>