force-app/main/default/objects/Account/listViews/Duplicate_Accounts_LMS.listView-meta.xml
<ListView>
    <fullName>Duplicate_Accounts_LMS</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Added_To_Intacct__c</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>LearningLogin_Id__c</columns>
    <columns>Account_Status__c</columns>
    <columns>Reclaimed_Date__c</columns>
    <columns>Reclaimed_From__c</columns>
    <columns>ACCOUNT.LAST_UPDATE</columns>
    <columns>PARENT_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Duplicate_Account__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>LearningLogin_Id__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Duplicate Accounts (LMS)</label>
</ListView>