force-app/main/default/objects/Account/listViews/My_Accounts_No_Industry.listView-meta.xml
<ListView>
    <fullName>My_Accounts_No_Industry</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.INDUSTRY</columns>
    <columns>Client_ID__c</columns>
    <columns>Primary_Contact__c</columns>
    <columns>ACCOUNT.ADDRESS1_STREET</columns>
    <columns>ACCOUNT.ADDRESS1_CITY</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>Last_Contact__c</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Account_Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <filters>
        <field>ACCOUNT.INDUSTRY</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Business_Account</value>
    </filters>
    <label>My Accounts (No Industry)</label>
</ListView>