force-app/main/default/objects/Account/listViews/My_Frozen_Accounts.listView-meta.xml
<ListView>
    <fullName>My_Frozen_Accounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Client_ID__c</columns>
    <columns>Primary_Contact__c</columns>
    <columns>Primary_Contact_Email__c</columns>
    <columns>ACCOUNT.ADDRESS1_STREET</columns>
    <columns>ACCOUNT.ADDRESS1_CITY</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>Last_Contact__c</columns>
    <columns>Invoice_Balance__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Account_Status__c</field>
        <operation>equals</operation>
        <value>Frozen</value>
    </filters>
    <label>My Frozen Accounts</label>
</ListView>