force-app/main/default/objects/Account/listViews/My_Last_Contact_Accounts.listView-meta.xml
<ListView>
    <fullName>My_Last_Contact_Accounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Client_ID__c</columns>
    <columns>Primary_Contact__c</columns>
    <columns>ACCOUNT.ADDRESS1_STREET</columns>
    <columns>ACCOUNT.ADDRESS1_CITY</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>Last_Contact__c</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Last_Contact__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Business_Account</value>
    </filters>
    <label>My Last Contact Accounts</label>
</ListView>